[gd_scene load_steps=5 format=3 uid="uid://cllorcd1pgx1n"]

[ext_resource type="Script" path="res://FarmUI.gd" id="1_ecnlu"]
[ext_resource type="Script" path="res://ConvictListBuilding.gd" id="2_57rw3"]
[ext_resource type="Script" path="res://ConvictLine.gd" id="3_moipn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_df1kb"]
bg_color = Color(0, 0.541176, 0.258824, 1)

[node name="FarmUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecnlu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 588.0
offset_bottom = 573.0

[node name="HeadingLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 587.0
offset_bottom = 23.0
text = "This is a farm"
horizontal_alignment = 1

[node name="NicePicPanel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 52.0
offset_top = 75.0
offset_right = 273.0
offset_bottom = 254.0
theme_override_styles/panel = SubResource("StyleBoxFlat_df1kb")

[node name="AltTextLabel" type="Label" parent="Panel/NicePicPanel"]
layout_mode = 0
offset_right = 223.0
offset_bottom = 188.0
text = "Nice pic of a farm?"

[node name="LabourersLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 313.0
offset_top = 81.0
offset_right = 554.0
offset_bottom = 104.0
text = "Labourers: 0"

[node name="ConvictsLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 313.0
offset_top = 113.0
offset_right = 554.0
offset_bottom = 136.0
text = "Convicts: 10"

[node name="ConvictsListButton" type="Button" parent="Panel/ConvictsLabel"]
layout_mode = 0
offset_left = 126.0
offset_top = -3.0
offset_right = 208.0
offset_bottom = 28.0
text = "<List>
"

[node name="ProductionLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 313.0
offset_top = 225.0
offset_right = 554.0
offset_bottom = 248.0
text = "Production: 9999"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_top = 376.0
offset_right = 588.0
offset_bottom = 416.0

[node name="AssignConvictsButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
text = "Assign Convicts"

[node name="ExitButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
text = "Exit"

[node name="ConvictListPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 728.0
offset_right = 1369.0
offset_bottom = 729.0
script = ExtResource("2_57rw3")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/ConvictListPanel"]
layout_mode = 0
offset_top = 169.0
offset_right = 637.0
offset_bottom = 630.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ConvictListPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConvictLine" type="Panel" parent="Panel/ConvictListPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_moipn")

[node name="Title" type="Label" parent="Panel/ConvictListPanel"]
layout_mode = 0
offset_right = 638.0
offset_bottom = 47.0
text = "Convicts"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AssignConvictPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 728.0
offset_right = 1369.0
offset_bottom = 729.0
script = ExtResource("2_57rw3")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/AssignConvictPanel"]
layout_mode = 0
offset_top = 169.0
offset_right = 637.0
offset_bottom = 630.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/AssignConvictPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConvictLine" type="Panel" parent="Panel/AssignConvictPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_moipn")

[node name="Title" type="Label" parent="Panel/AssignConvictPanel"]
layout_mode = 0
offset_right = 638.0
offset_bottom = 47.0
text = "Assign Convicts"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/ConvictsLabel/ConvictsListButton" to="." method="_on_convicts_list_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/AssignConvictsButton" to="." method="_on_assign_convicts_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
